--- a/notebooks/00_setup.ipynb
+++ b/notebooks/00_setup.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -16,10 +16,6 @@
       "source": [
         "# ===============================================================\n",
         "# 00 - Setup inicial del proyecto\n",
-        "# Proyecto: Psych Phenotyping Paraguay 🇵🇾\n",
-        "# Autor: Manuel Núñez\n",
-        "# Maestría en Ciencia de Datos - Universidad Comunera (UCOM)\n",
-        "# 2025\n",
         "# ===============================================================\n",
         "\n",
         "import os, sys, pathlib, yaml\n",
@@ -42,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -86,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [
         {
@@ -111,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
@@ -146,15 +142,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ Dataset cargado: ips_clean.csv\n",
-            "   Filas: 3126 | Columnas: 4\n",
+            "⚠️ No se encontró ips_clean.csv en /data.\n",
+            "   Ejecuta 01_eda_preprocessing.ipynb para generarlo primero.\n",
             "\n",
             "Distribución de clases:\n",
             "etiqueta\n",
@@ -185,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -198,7 +194,7 @@
             "   Base path : /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
             "   Data path : /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
             "   Fork path : /Users/manuelnunez/Projects/psych-phenotyping-paraguay/Spanish_Psych_Phenotyping_PY\n",
-            "   Dataset   : ips_clean.csv\n",
+            "   Dataset   : ⚠️ No encontrado\n",
             "\n",
             "✅ Setup completado correctamente.\n"
           ]
