--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
     "    df[label_col] = df[label_col].map(_norm_label_bin)\n",
     "    df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
     "\n",
-    "# Ligero para reglas (no pegamos negaciones, conservamos tildes/casing)\n",
+    "# Regla-based: conservador (no romper patrones); colapsar alargamientos; conservamos tildes/casing\n",
     "_RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
     "def clean_text_rb(s: str) -> str:\n",
     "    if pd.isna(s): return \"\"\n",
