--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "56fb4499",
    "metadata": {},
    "outputs": [
@@ -118,6 +118,7 @@
     "df[label_col] = df[label_col].map(_norm_label_bin)\n",
     "df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
     "\n",
+    "# TF-IDF: agresivo (lower, símbolos, alargamientos, proxy negación 'no_X')\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
     "def clean_text_ml(s: str) -> str:\n",
     "    if pd.isna(s): return \"\"\n",
