--- a/notebooks/02_baseline_transformer_beto.ipynb
+++ b/notebooks/02_baseline_transformer_beto.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a7a50745",
    "metadata": {},
    "outputs": [
@@ -126,6 +126,7 @@
     "df[label_col] = df[label_col].map(_norm_label_bin)\n",
     "df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
     "\n",
+    "# Transformer: conservador (mantener tildes/casing; sólo alargamientos/espacios)\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
     "def clean_text_trf(s: str) -> str:\n",
     "    if pd.isna(s): return \"\"\n",
