Homologa el Conjunto de Evaluación

--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "75c9b111",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -105,29 +105,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Etiquetas (si existen):\n",
+      "✅ Splits cargados: Train=2518 | Val=630\n",
+      "Train distribución:\n",
       "Tipo\n",
-      "depresion    2223\n",
-      "ansiedad      925\n",
+      "depresion    1778\n",
+      "ansiedad      740\n",
       "Name: count, dtype: int64\n",
-      "TMP para fork: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_clean_tmp.csv\n"
+      "Val distribución:\n",
+      "Tipo\n",
+      "depresion    445\n",
+      "ansiedad     185\n",
+      "Name: count, dtype: int64\n",
+      "Train distribución:\n",
+      "Tipo\n",
+      "depresion    1778\n",
+      "ansiedad      740\n",
+      "Name: count, dtype: int64\n",
+      "Val distribución:\n",
+      "Tipo\n",
+      "depresion    445\n",
+      "ansiedad     185\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd, re, unicodedata\n",
     "\n",
-    "df_base = pd.read_csv(INPUT_FILE)\n",
-    "text_col  = _guess_text_col(df_base)\n",
-    "label_col = _guess_label_col(df_base)\n",
+    "# === CARGAR SPLITS UNIFICADOS ===\n",
+    "SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
+    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
+    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "df = df_base.copy()\n",
-    "df = df.dropna(subset=[text_col]).copy()\n",
-    "if label_col:\n",
-    "    df[label_col] = df[label_col].map(_norm_label_bin)\n",
-    "    df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
+    "print(f\"✅ Splits cargados: Train={len(train_indices)} | Val={len(val_indices)}\")\n",
     "\n",
-    "# Regla-based: conservador (no romper patrones); colapsar alargamientos; conservamos tildes/casing\n",
+    "text_col  = _guess_text_col(dataset_base)\n",
+    "label_col = _guess_label_col(dataset_base)\n",
+    "\n",
+    "# Preprocesamiento ligero para rule-based (conserva tildes/casing, colapsa alargamientos)\n",
     "_RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
     "def clean_text_rb(s: str) -> str:\n",
     "    if pd.isna(s): return \"\"\n",
@@ -137,14 +153,14 @@
     "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
     "    return s\n",
     "\n",
-    "df['texto_rb'] = df[text_col].map(clean_text_rb)\n",
-    "print(\"Etiquetas (si existen):\")\n",
-    "if label_col: print(df[label_col].value_counts())\n",
+    "dataset_base['texto_rb'] = dataset_base[text_col].map(clean_text_rb)\n",
     "\n",
-    "# Input esperado por el fork\n",
-    "tmp_in = DATA_PATH/'ips_clean_tmp.csv'\n",
-    "df[['texto_rb'] + ([label_col] if label_col else [])].rename(columns={'texto_rb':'texto'}).to_csv(tmp_in, index=False, encoding='utf-8')\n",
-    "print(\"TMP para fork:\", tmp_in)"
+    "# Separar train y val usando índices guardados\n",
+    "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
+    "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
+    "\n",
+    "print(f\"Train distribución:\\n{df_train[label_col].value_counts()}\")\n",
+    "print(f\"Val distribución:\\n{df_val[label_col].value_counts()}\")"
    ]
   },
   {
@@ -157,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "0b09ee4c",
    "metadata": {},
    "outputs": [
@@ -177,7 +193,20 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=3148\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=630\n",
+      "\n",
+      "Components in NLP pipeline:\n",
+      "\t- tok2vec\n",
+      "\t- morphologizer\n",
+      "\t- attribute_ruler\n",
+      "\t- lemmatizer\n",
+      "\t- medspacy_pyrush\n",
+      "\t- medspacy_target_matcher\n",
+      "\t- medspacy_context\n",
+      "Concepts included (by folder): Ansiedad, Depresion\n",
+      "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
+      "Total target rules added: 229\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=630\n",
       "\n"
      ]
     }
@@ -195,7 +224,7 @@
     "cfg = {}\n",
     "if col_cfg.exists():\n",
     "    cfg = yaml.safe_load(col_cfg.read_text(encoding='utf-8')) or {}\n",
-    "cfg['text_column'] = 'texto'\n",
+    "cfg['text_column'] = 'texto_rb'\n",
     "col_cfg.write_text(yaml.safe_dump(cfg, allow_unicode=True), encoding='utf-8')\n",
     "\n",
     "fen = {}\n",
@@ -208,6 +237,10 @@
     "main_py = FORK_PATH/'main.py'\n",
     "runner = cli_py if cli_py.exists() else main_py\n",
     "assert runner.exists(), \"No se encontró cli.py ni main.py en el fork.\"\n",
+    "\n",
+    "# Crear temp input solo con val set (para evaluar)\n",
+    "tmp_in = DATA_PATH/'ips_clean_tmp.csv'\n",
+    "df_val[['texto_rb', label_col]].rename(columns={'texto_rb':'texto_rb'}).to_csv(tmp_in, index=False, encoding='utf-8')\n",
     "\n",
     "# Salidas estandarizadas (comparables)\n",
     "rule_pred_csv   = DATA_PATH/'rule_based_predictions.csv'\n",
@@ -222,7 +255,7 @@
     "print(ret.stdout)\n",
     "if ret.returncode != 0:\n",
     "    print(ret.stderr)\n",
-    "    raise RuntimeError(f\"CLI terminó con código {ret.returncode}\")\n"
+    "    raise RuntimeError(f\"CLI terminó con código {ret.returncode}\")"
    ]
   },
   {
@@ -235,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "84dbc18f",
    "metadata": {},
    "outputs": [
@@ -266,39 +299,32 @@
     "    return s\n",
     "\n",
     "y_pred = preds['pred_label'].map(_norm_txt)\n",
-    "if label_col:\n",
-    "    y_true = df[label_col].map(_norm_txt)\n",
-    "else:\n",
-    "    y_true = None\n",
+    "y_true = df_val[label_col].map(_norm_txt)\n",
     "\n",
     "# En caso de que el fork devuelva algo fuera de A/D, lo mapeamos a la clase mayoritaria para evaluar binario\n",
     "allowed = {'ansiedad','depresion'}\n",
-    "if y_true is not None:\n",
-    "    majority = y_true.value_counts().idxmax()\n",
-    "    y_pred = y_pred.where(y_pred.isin(allowed), majority)\n",
+    "majority = y_true.value_counts().idxmax()\n",
+    "y_pred = y_pred.where(y_pred.isin(allowed), majority)\n",
     "\n",
     "classes = ['depresion','ansiedad']\n",
-    "if y_true is not None:\n",
-    "    pd.DataFrame(classification_report(y_true, y_pred, labels=classes, output_dict=True, zero_division=0)).transpose()      .to_csv(rule_report_csv, index=True, encoding='utf-8')\n",
     "\n",
-    "    pd.DataFrame([{\n",
-    "        'macro_f1': f1_score(y_true, y_pred, average='macro', zero_division=0),\n",
-    "        'macro_precision': precision_score(y_true, y_pred, average='macro', zero_division=0),\n",
-    "        'macro_recall': recall_score(y_true, y_pred, average='macro', zero_division=0),\n",
-    "        'n': int(len(y_true))\n",
-    "    }]).to_csv(rule_eval_csv, index=False, encoding='utf-8')\n",
+    "pd.DataFrame(classification_report(y_true, y_pred, labels=classes, output_dict=True, zero_division=0)).transpose()  .to_csv(rule_report_csv, index=True, encoding='utf-8')\n",
     "\n",
-    "    cm = confusion_matrix(y_true, y_pred, labels=classes)\n",
-    "    pd.DataFrame(cm, index=[f'true_{c}' for c in classes], columns=[f'pred_{c}' for c in classes]).to_csv(rule_cm_csv)\n",
+    "pd.DataFrame([{\n",
+    "    'macro_f1': f1_score(y_true, y_pred, average='macro', zero_division=0),\n",
+    "    'macro_precision': precision_score(y_true, y_pred, average='macro', zero_division=0),\n",
+    "    'macro_recall': recall_score(y_true, y_pred, average='macro', zero_division=0),\n",
+    "    'n': int(len(y_true))\n",
+    "}]).to_csv(rule_eval_csv, index=False, encoding='utf-8')\n",
+    "\n",
+    "cm = confusion_matrix(y_true, y_pred, labels=classes)\n",
+    "pd.DataFrame(cm, index=[f'true_{c}' for c in classes], columns=[f'pred_{c}' for c in classes]).to_csv(rule_cm_csv)\n",
     "\n",
     "print(\"✅ Exportados:\")\n",
     "print(\" - Predicciones:\", rule_pred_csv)\n",
-    "if y_true is not None:\n",
-    "    print(\" - Reporte:\", rule_report_csv)\n",
-    "    print(\" - Métricas:\", rule_eval_csv)\n",
-    "    print(\" - Matriz:\", rule_cm_csv)\n",
-    "else:\n",
-    "    print(\" - (sin gold labels, no se calculan métricas)\")"
+    "print(\" - Reporte:\", rule_report_csv)\n",
+    "print(\" - Métricas:\", rule_eval_csv)\n",
+    "print(\" - Matriz:\", rule_cm_csv)"
    ]
   }
  ],
