--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "361947b5",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "56fb4499",
    "metadata": {},
    "outputs": [
@@ -100,23 +100,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Etiquetas: Tipo\n",
-      "depresion    2223\n",
-      "ansiedad      925\n",
+      "✅ Splits cargados: Train=2518 | Val=630\n",
+      "Train distribución:\n",
+      "Tipo\n",
+      "depresion    1778\n",
+      "ansiedad      740\n",
+      "Name: count, dtype: int64\n",
+      "Val distribución:\n",
+      "Tipo\n",
+      "depresion    445\n",
+      "ansiedad     185\n",
+      "Name: count, dtype: int64\n",
+      "Train distribución:\n",
+      "Tipo\n",
+      "depresion    1778\n",
+      "ansiedad      740\n",
+      "Name: count, dtype: int64\n",
+      "Val distribución:\n",
+      "Tipo\n",
+      "depresion    445\n",
+      "ansiedad     185\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "df_base = pd.read_csv(INPUT_FILE)\n",
-    "text_col  = _guess_text_col(df_base)\n",
-    "label_col = _guess_label_col(df_base)\n",
-    "if label_col is None:\n",
-    "    raise ValueError(\"Se requiere columna de etiquetas para entrenar TF‑IDF baseline.\")\n",
+    "import pandas as pd, re, unicodedata\n",
     "\n",
-    "df = df_base.dropna(subset=[text_col, label_col]).copy()\n",
-    "df[label_col] = df[label_col].map(_norm_label_bin)\n",
-    "df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
+    "# === CARGAR SPLITS UNIFICADOS ===\n",
+    "SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
+    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
+    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
+    "\n",
+    "print(f\"✅ Splits cargados: Train={len(train_indices)} | Val={len(val_indices)}\")\n",
+    "\n",
+    "text_col  = _guess_text_col(dataset_base)\n",
+    "label_col = _guess_label_col(dataset_base)\n",
     "\n",
     "# TF-IDF: agresivo (lower, símbolos, alargamientos, proxy negación 'no_X')\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
@@ -130,8 +150,17 @@
     "    s = re.sub(r\"\\bno\\s+([a-záéíóúüñ]{2,})\", r\"no_\\1\", s)  # negación simple\n",
     "    return s\n",
     "\n",
-    "df['texto_ml'] = df[text_col].map(clean_text_ml)\n",
-    "print(\"Etiquetas:\", df[label_col].value_counts())"
+    "dataset_base['texto_ml'] = dataset_base[text_col].map(clean_text_ml)\n",
+    "\n",
+    "# Separar train y val usando índices guardados\n",
+    "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
+    "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
+    "\n",
+    "X_train, y_train = df_train['texto_ml'], df_train[label_col]\n",
+    "X_val, y_val = df_val['texto_ml'], df_val[label_col]\n",
+    "\n",
+    "print(f\"Train distribución:\\n{y_train.value_counts()}\")\n",
+    "print(f\"Val distribución:\\n{y_val.value_counts()}\")"
    ]
   },
   {
@@ -144,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "53508f46",
    "metadata": {},
    "outputs": [
@@ -152,18 +181,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrenamiento OK.\n"
+      "✅ Entrenamiento completado.\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.svm import LinearSVC\n",
-    "\n",
-    "X = df['texto_ml']; y = df[label_col]\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "tfidf_char = TfidfVectorizer(\n",
     "    analyzer='char_wb',\n",
@@ -178,8 +203,8 @@
     "])\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
-    "pred = clf.predict(X_val)\n",
-    "print(\"Entrenamiento OK.\")"
+    "y_pred = clf.predict(X_val)\n",
+    "print(\"✅ Entrenamiento completado.\")"
    ]
   },
   {
@@ -192,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "921cc305",
    "metadata": {},
    "outputs": [
@@ -218,19 +243,19 @@
     "\n",
     "classes = ['depresion','ansiedad']\n",
     "\n",
-    "pd.DataFrame(classification_report(y_val, pred, labels=classes, output_dict=True, zero_division=0))  .transpose().to_csv(tfidf_report_csv, index=True, encoding='utf-8')\n",
+    "pd.DataFrame(classification_report(y_val, y_pred, labels=classes, output_dict=True, zero_division=0))  .transpose().to_csv(tfidf_report_csv, index=True, encoding='utf-8')\n",
     "\n",
     "pd.DataFrame([{\n",
-    "    'macro_f1': f1_score(y_val, pred, average='macro', zero_division=0),\n",
-    "    'macro_precision': precision_score(y_val, pred, average='macro', zero_division=0),\n",
-    "    'macro_recall': recall_score(y_val, pred, average='macro', zero_division=0),\n",
+    "    'macro_f1': f1_score(y_val, y_pred, average='macro', zero_division=0),\n",
+    "    'macro_precision': precision_score(y_val, y_pred, average='macro', zero_division=0),\n",
+    "    'macro_recall': recall_score(y_val, y_pred, average='macro', zero_division=0),\n",
     "    'n': int(len(y_val))\n",
     "}]).to_csv(tfidf_eval_csv, index=False, encoding='utf-8')\n",
     "\n",
-    "cm = confusion_matrix(y_val, pred, labels=classes)\n",
+    "cm = confusion_matrix(y_val, y_pred, labels=classes)\n",
     "pd.DataFrame(cm, index=[f'true_{c}' for c in classes], columns=[f'pred_{c}' for c in classes]).to_csv(tfidf_cm_csv)\n",
     "\n",
-    "pd.DataFrame({'texto': X_val, 'y_true': y_val, 'y_pred': pred}).to_csv(tfidf_pred_csv, index=False, encoding='utf-8')\n",
+    "pd.DataFrame({'texto': X_val, 'y_true': y_val, 'y_pred': y_pred}).to_csv(tfidf_pred_csv, index=False, encoding='utf-8')\n",
     "\n",
     "print(\"✅ Exportados:\")\n",
     "print(\" - Predicciones:\", tfidf_pred_csv)\n",
