--- a/notebooks/02_baseline_transformer_beto.ipynb
+++ b/notebooks/02_baseline_transformer_beto.ipynb
@@ -12,16 +12,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cc9feb58",
-   "metadata": {},
-   "source": [
-    "> Requisitos (una sola vez): `pip install transformers datasets accelerate evaluate`"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "3bb438c5",
    "metadata": {},
    "outputs": [
@@ -100,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a7a50745",
    "metadata": {},
    "outputs": [
@@ -108,23 +100,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaños: 2518 630\n"
+      "✅ Splits cargados: Train=2518 | Val=630\n",
+      "Train: 2518 | Val: 630\n",
+      "Train distribución:\n",
+      "label\n",
+      "0    1778\n",
+      "1     740\n",
+      "Name: count, dtype: int64\n",
+      "Val distribución:\n",
+      "label\n",
+      "0    445\n",
+      "1    185\n",
+      "Name: count, dtype: int64\n",
+      "Train: 2518 | Val: 630\n",
+      "Train distribución:\n",
+      "label\n",
+      "0    1778\n",
+      "1     740\n",
+      "Name: count, dtype: int64\n",
+      "Val distribución:\n",
+      "label\n",
+      "0    445\n",
+      "1    185\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd, re, unicodedata\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "df_base = pd.read_csv(INPUT_FILE)\n",
-    "text_col  = _guess_text_col(df_base)\n",
-    "label_col = _guess_label_col(df_base)\n",
-    "if label_col is None:\n",
-    "    raise ValueError(\"Se requiere columna de etiquetas para entrenar transformer.\")\n",
+    "# === CARGAR SPLITS UNIFICADOS ===\n",
+    "SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
+    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
+    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "df = df_base.dropna(subset=[text_col, label_col]).copy()\n",
-    "df[label_col] = df[label_col].map(_norm_label_bin)\n",
-    "df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
+    "print(f\"✅ Splits cargados: Train={len(train_indices)} | Val={len(val_indices)}\")\n",
+    "\n",
+    "text_col  = _guess_text_col(dataset_base)\n",
+    "label_col = _guess_label_col(dataset_base)\n",
     "\n",
     "# Transformer: conservador (mantener tildes/casing; sólo alargamientos/espacios)\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
@@ -136,12 +150,17 @@
     "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
     "    return s\n",
     "\n",
-    "df['texto_trf'] = df[text_col].map(clean_text_trf)\n",
+    "dataset_base['texto_trf'] = dataset_base[text_col].map(clean_text_trf)\n",
     "label2id = {'depresion':0, 'ansiedad':1}\n",
-    "df['label'] = df[label_col].map(label2id)\n",
+    "dataset_base['label'] = dataset_base[label_col].map(label2id)\n",
     "\n",
-    "train_df, val_df = train_test_split(df[['texto_trf','label']], test_size=0.2, random_state=42, stratify=df['label'])\n",
-    "print(\"Tamaños:\", len(train_df), len(val_df))"
+    "# Separar train y val usando índices guardados\n",
+    "train_df = dataset_base[dataset_base['row_id'].isin(train_indices)][['texto_trf','label']].copy()\n",
+    "val_df = dataset_base[dataset_base['row_id'].isin(val_indices)][['texto_trf','label']].copy()\n",
+    "\n",
+    "print(f\"Train: {len(train_df)} | Val: {len(val_df)}\")\n",
+    "print(f\"Train distribución:\\n{train_df['label'].value_counts()}\")\n",
+    "print(f\"Val distribución:\\n{val_df['label'].value_counts()}\")"
    ]
   },
   {
@@ -154,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "6298d69f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33757bb680a84e008bd35bf1e9ab28d8",
+       "model_id": "987fef2fae6f4109af42fa3ca6fb0cb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cda02baa99ac4add918073e621a2d3ed",
+       "model_id": "a7fcc9ead7094246bd058a84128826a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "330e270a",
    "metadata": {},
    "outputs": [
@@ -223,7 +242,9 @@
      "text": [
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at dccuchile/bert-base-spanish-wwm-cased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_23798/2543227052.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2543227052.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "  trainer = Trainer(\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2543227052.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n"
      ]
     },
@@ -234,7 +255,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='474' max='474' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [474/474 08:50, Epoch 3/3]\n",
+       "      [474/474 08:21, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -250,27 +271,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.347500</td>\n",
-       "      <td>0.338776</td>\n",
-       "      <td>0.797078</td>\n",
-       "      <td>0.820791</td>\n",
-       "      <td>0.781840</td>\n",
+       "      <td>0.367800</td>\n",
+       "      <td>0.311753</td>\n",
+       "      <td>0.807470</td>\n",
+       "      <td>0.865743</td>\n",
+       "      <td>0.780443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.246600</td>\n",
-       "      <td>0.379595</td>\n",
-       "      <td>0.804654</td>\n",
-       "      <td>0.792952</td>\n",
-       "      <td>0.828576</td>\n",
+       "      <td>0.264700</td>\n",
+       "      <td>0.292184</td>\n",
+       "      <td>0.852454</td>\n",
+       "      <td>0.853017</td>\n",
+       "      <td>0.851898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.131800</td>\n",
-       "      <td>0.378455</td>\n",
-       "      <td>0.833558</td>\n",
-       "      <td>0.826977</td>\n",
-       "      <td>0.841573</td>\n",
+       "      <td>0.136600</td>\n",
+       "      <td>0.315057</td>\n",
+       "      <td>0.855857</td>\n",
+       "      <td>0.869106</td>\n",
+       "      <td>0.845339</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -366,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "6178f168",
    "metadata": {},
    "outputs": [
